--- a/prj-02/src/styles/WebpageFooter.css
+++ b/prj-02/src/styles/WebpageFooter.css
@@ -4,7 +4,7 @@
     font-family: 'Arial', sans-serif;
     background-color: #0A0F1F;
     color: #E0E0E0;
-    overflow: hidden;
+    overflow: visible;
     box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.5); /* Shadow only at the top */
   
 }
